[tool.poetry]
name = "webhookapp"
version = "0.1.0"
description = ""
authors = ["Nail <nsnasyjrov@gmail.com"]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
pydantic-settings = "^2.7.0"
blueprint = "^3.4.2"
flask-cors = "^5.0.0"
psycopg2 = "^2.9.10"
flask-jwt-extended = "^4.7.1"
flask-migrate = "^4.1.0"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
python-dotenv = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
